--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 </style>
 </head>
 <body>
-    <header class="page-title-header"><h1>Interactive Markdown Editor</h1></header>
+    <header class="page-title-header"><h1>Interactive Markdown Editor made by EE Eldien </h1></header>
     <div class="controls-area">
         <div class="control-group"><label for="fileInput">Load file:</label><input type="file" id="fileInput" accept=".txt,.md,.markdown"></div>
         <!-- <<< MODIFIED CONTROL GROUP FOR CODE BG >>> -->
